added dummy links and link styling

--- a/main.css
+++ b/main.css
@@ -8,6 +8,11 @@ body{
     background-color: aliceblue;
 }
 
+a{
+    text-decoration: none;
+    color: #000000;
+}
+
 header{
     min-height: 100px;
     display: flex;
