--- a/main.css
+++ b/main.css
@@ -52,6 +52,10 @@ nav{
     align-items: center;
 }
 
+.photo-container h3{
+    width: 100%;
+    text-align: center;
+}
 
 .photo-container img{
     width: 80%;
