--- a/main.css
+++ b/main.css
@@ -6,6 +6,7 @@ html, body{
 body{
     width: 100%;
     background-color: aliceblue;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 a{
@@ -13,18 +14,43 @@ a{
     color: #000000;
 }
 
+a:hover{
+    color: #3474e4;
+}
+
+ul{
+    list-style-type: none;
+    padding: 0;
+}
+
 header{
     min-height: 100px;
     display: flex;
-    justify-content: flex-end;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+header h1{
+    margin: 0;
+    padding: 12px 0 8px 0;
+    border-bottom: 1px solid gray;
 }
 
 nav{
     display:flex;
     list-style-type: none;
-    width: 80%;
+    width: 100%;
     justify-content: space-evenly;
     align-items: flex-end;
+}
+
+nav li{
+    padding: 5px 10px;
+}
+
+nav li:hover{
+    transform: scale(1.2);
+    transition: transform 0.25s;
 }
 
 .hero-landing{
@@ -39,12 +65,12 @@ nav{
     width: 100%;
 }
 
-.featured h2{
-    margin: 10px 0 0 5px;
+h2{
+    margin: 10px 0 0 15px;
 }
 
 .photo-container{
-    padding: 10px;
+    /* padding: 10px; */
     width:  100%;
     display: flex;
     flex-wrap: wrap;
@@ -67,6 +93,65 @@ nav{
     transition: transform 0.5s;
 }
 
+.album-container{
+    width: 100%;
+    padding: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
 .album-container img{
     width: 48%;
 }
+
+.about {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    
+}
+
+.about img{
+    width: 80%;
+    max-height: 300px;
+    max-width: 300px;
+    border-radius: 50%;
+    padding: 15px 0;
+}
+
+.about p{
+    width: 80%;
+}
+
+footer{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    min-height: 100px;
+}
+.contact {
+    display: inherit;
+    width: 100%;
+    justify-content:space-evenly;
+}
+
+.contact li a{
+    font-size: 36px;
+    padding: 5px 10px;
+    color: rgb(193, 193, 193);
+}
+
+.contact i:hover{
+    color: #3474e4;
+    transform: scale(1.5);
+    transition: transform 0.25s;
+}
+
+.footer ul{
+    margin: 0;
+}
+
+
+
