--- a/main.css
+++ b/main.css
@@ -32,7 +32,7 @@ header{
 
 header h1{
     margin: 0;
-    padding: 12px 0 8px 0;
+    padding: 12px 50px 8px 50px;
     border-bottom: 1px solid gray;
 }
 
@@ -122,6 +122,7 @@ h2{
     width: 48%;
     margin-bottom: 10px;
 }
+
 
 .about {
     width: 100%;
