--- a/styles/main.css
+++ b/styles/main.css
@@ -5,7 +5,7 @@ html, body{
 
 body{
     width: 100%;
-    background-color: aliceblue;
+    background-color: rgba(232, 232, 232, 0.598);
     font-family: 'Ubuntu', sans-serif;
 }
 
